src/component/BasePage/index.css
body {
  margin: 0;
  background: rgb(249, 249, 249);
}

.ziltag-base-page {
  height: 100%;
}

.ziltag-base-page__head {
  background: white;
  border-bottom: 1px solid rgba(0, 0, 0, .12);
}

.ziltag-base-page__avatar {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  cursor: pointer;
}

.ziltag-base-page__href {
  font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
  font-size: 11px;
  color: rgba(0, 0, 0, .87);
}

.ziltag-base-page__href a {
  color: rgba(0, 0, 0, .87);
}

.ziltag-base-page .ziltag-base-page__avatar{
  float: right;
  margin: 12px 23px;
}

.ziltag-base-page .ziltag-base-page__avatar-menu {
  position: absolute;
  right: 16px;
  top: 47px;
}

.ziltag-base-page-main {
  display: flex;
}

.ziltag-base-page-main__col0, .ziltag-base-page-main__col1 {
  width: 50%;
}

.ziltag-base-page .ziltag-base-page-main {
  margin: 20px;
}

.ziltag-base-page__head .ziltag-logo {
  margin: 12px 20px;
}

.ziltag-base-page-main__col0 .ziltag-ziltag-map {
  margin-bottom: 4px;
}

.ziltag-base-page-main__col1 .ziltag-ziltag-page__op {
  margin-bottom: 14px;
}

.ziltag-base-page-main__col1 .ziltag-ziltag-content {
  margin-bottom: 30px;
}

.ziltag-base-page-main__col1 h2 {
  font-size: 14px;
  font-weight: 500;
  color: rgba(0, 0, 0, .87);
}

